<resources>
    <string name="app_name">Shop</string>
    <string name="toolBarTitle">MyShop</string>
    <string name="buyProduct">Buy Product</string>
    <string name="sellProduct">Sell Product</string>

    <string name="navDrOpen">open</string>
    <string name="navDrClose">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="buyerNameBuyFrag">Tap to set buyer\'s name</string>
    <string name="sellerNameBuyFrag">Tap to set seller\'s name</string>
    <string name="name">name</string>
    <string name="chooseProdTxt">Choose product</string>
    <string name="boxQuanDumyTxt">Box count</string>
    <string name="unitDumyTxt">Unit</string>
    <string name="submit">Submit</string>
    <string name="itemPerBoxDumyTxt">Item per box</string>
    <string name="boxPriceDumyTxt">Box price</string>
    <string name="pricePerProdDumyTxt">Product price</string>
    <string name="prodCountDumyTxt">Product count</string>
    <string name="totalAmountDumyTxt">Total amount</string>
    <string name="buyInfoDialogueProdName">Choose product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billPayment">Bill payment</string>
</resources>