<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialogWidth"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialogPadding"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseProdTxt"
        android:id="@+id/chooseProdTxt"
        android:gravity="center"
        android:padding="10dp"
        />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross"
            android:id="@+id/clearAllImgBtn"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:visibility="invisible"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/prodCountLinLayoutProdEntry">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prodCountDumyTxt"
            android:id="@+id/prodCountDumyTxt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prodCountEt"
            android:inputType="numberDecimal"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross"
            android:id="@+id/clearImgBtn0"
            android:visibility="invisible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/pricePerProdLinLayoutProdEntry"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pricePerProdDumyTxt"
            android:id="@+id/pricePerProdDumyTxt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pricePerProdEt"
            android:inputType="numberDecimal"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross"
            android:id="@+id/clearImgBtn1"
            android:visibility="invisible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/boxQuanLayoutProdEntry">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxQuanDumyTxt"
            android:id="@+id/boxQuanDumyTxt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/boxQuanEt"
            android:inputType="numberDecimal"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross"
            android:id="@+id/clearImgBtn2"
            android:visibility="invisible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/boxPriceLinLayoutProdEntry">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boxPriceDumyTxt"
            android:id="@+id/boxPriceDumyTxt"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boxPriceEt"
        android:inputType="numberDecimal"
        />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross"
            android:id="@+id/clearImgBtn3"
            android:visibility="invisible"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/itemPerBoxLinLayoutProdEntry">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemPerBoxDumyTxt"
            android:id="@+id/itemPerBoxDumyTxt"
            />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemPerBoxEt"
        android:inputType="numberDecimal"
        />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross"
            android:id="@+id/clearImgBtn4"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/totalAmountDLinLayoutProdEntry">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalAmountDumyTxt"
            android:id="@+id/totalAmountDumyTxt"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totalAmountEt"
        android:inputType="numberDecimal"
        />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/cross"
            android:id="@+id/clearImgBtn5"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unitDumyTxt"
            android:id="@+id/unitDumyTxt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/unitEt"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitBtn"/>

</LinearLayout>